--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,6 @@ h1, h2, h3, h4, h5, h6 {
   display: table;
   width: 100%;
   height: 100vh;
-  background: url(../img/hero-bg.jpg) top center fixed;
   background-size: cover;
 }
 
@@ -263,7 +262,7 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 .nav-menu a{
-  
+
   cursor: pointer;
 }
 
@@ -502,7 +501,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #about {
 background: #fff;
 padding: 80px 0;
-background: url(../img/about-img.jpg);
+
 
 
 }
@@ -998,3 +997,34 @@ height: 100%;
   color: #ccc;
 }
 
+/*--------------------------------------------------------------
+              modal
+-----------------------------------------------------------*/
+
+#projetos{
+   display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(f,f,f); /* Fallback color */
+    background-color: rgba(f,f,f,0.4); /* Black w/ opacity */
+    }
+    
+@-webkit-keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
+}
+
+@keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
+}
+
+#modal-header{ padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+}
