--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero .hero-container img {
 
-  width: 40%;
+  width: 32%;
   height:auto;
   float: center;
   position: relative;
@@ -212,13 +212,15 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   transition: 0.5s;
   margin: 10px;
-  border: 2px solid #fff;
-  color: #fff;
+  border: 2px solid #2dc997;
+  color: black;
+  background: white;
 }
 
 #hero .btn-get-started:hover {
   background: #2dc997;
   border: 2px solid #2dc997;
+  color: white;
 }
 
 /*--------------------------------------------------------------
@@ -500,18 +502,16 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* About Us Section
 --------------------------------*/
 #about {
-background: #fff;
 padding: 80px 0;
-background: url(../img/about-img.jpg);
-
-
+background-image: url(../img/try2.jpg);
 }
 
 
 #about .container{
 height: 100%;
- background: rgba(0,0,0,0.2);
-  margin-bottom: 10px;}
+ background: rgba(0,0,0,0.5);
+  margin-bottom: 10px;
+}
 
 #about .about-container .content {
   background: #fff;
@@ -521,6 +521,8 @@ height: 100%;
   color: white;
   font-weight: 700;
   font-size: 32px;
+
+  text-shadow: 0.5px 0.5px 0.5px black;
 }
 
 @media (max-width: 768px) {
@@ -530,8 +532,9 @@ height: 100%;
 }
 
 #about .about-container p {
+  color: white !important;
   line-height: 26px;
-  text-shadow: 1px 0px 1px black;
+  text-shadow: 0.5px 0.5px 0.5px black;
 
 }
 
@@ -627,11 +630,11 @@ height: 100%;
   padding: 50px 20px;
   margin-bottom: 50px;
   text-align: center;
-  border: 1px solid #e6e6e6;
   height: 200px;
   position: relative;
-  background: #fafafa;
+  background: rgba(0,0,0,0.5);
 }
+
 
 #services .icon {
   position: absolute;
@@ -671,22 +674,24 @@ height: 100%;
   font-size: 18px;
   margin-bottom: 15px;
   text-transform: uppercase;
+  color: white;
 }
 
 #services .title a {
-  color: #111;
-  text-shadow: 0 !important;
+  color: white;
+  text-shadow: 0.5px 0.5px 0.5px gray;
 }
 
 #services .description {
   font-size: 14px;
   line-height: 24px;
+  color:white;
 }
 
 /* Call To Action Section
 --------------------------------*/
 #call-to-action {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/call-to-action-bg.jpg) fixed center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2)), url(../img/try.jpg) fixed center center;
   background-size: cover;
   padding: 80px 0;
 }
