--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ h1, h2, h3, h4, h5, h6 {
   display: table;
   width: 100%;
   height: 100vh;
+  background-image: url(../img/hero-bg.jpg);
   background-size: cover;
 }
 
@@ -502,13 +503,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 #about {
 padding: 80px 0;
-<<<<<<< HEAD
 background-image: url(../img/try2.jpg);
-=======
-
-
-
->>>>>>> 873e18a04584b80c8fa44d136a4dc5ea5dc3f4bd
 }
 
 
