--- a/css/style.css
+++ b/css/style.css
@@ -692,7 +692,7 @@ height: 100%;
 /* Call To Action Section
 --------------------------------*/
 #call-to-action {
-  background:  rgb(31, 59, 29) fixed center center;
+  background:  rgba(31, 59, 29, 0.9) fixed center center;
   background-size: cover;
   padding: 80px 0;
 }
@@ -1034,4 +1034,14 @@ height: 100%;
 #modal-header{ padding: 2px 16px;
     background-color: #5cb85c;
     color: white;
+}
+
+@media only screen and (max-width:700px){
+  .videorafael{
+    width: 70%;
+    height: auto;
+  }
+  #mobile-nav-toggle{
+    margin:  20px 0 0 0;
+  }
 }
