--- a/css/style.css
+++ b/css/style.css
@@ -625,6 +625,7 @@ height: 100%;
   background: #fff;
   background-size: cover;
   padding: 80px 0 60px 0;
+  
 }
 
 #services .box {
@@ -1036,6 +1037,10 @@ height: 100%;
     color: white;
 }
 
+#map{
+  width: 100%;
+  height: 700px;
+}
 @media only screen and (max-width:700px){
   .videorafael{
     width: 70%;
@@ -1043,5 +1048,8 @@ height: 100%;
   }
   #mobile-nav-toggle{
     margin:  20px 0 0 0;
+  }
+  #map{
+    height: 200px;;
   }
 }
