--- a/css/style.css
+++ b/css/style.css
@@ -695,7 +695,7 @@ height: 100%;
 /* Call To Action Section
 --------------------------------*/
 #call-to-action {
-  background:  white fixed center center;
+  background:  rgb(177, 177, 177) fixed center center;
   background-size: cover;
   padding: 80px 0;
 }
@@ -733,10 +733,11 @@ height: 100%;
   margin: 10px;
   border: 2px solid #fff;
   color:black;
+  background: white
 }
 
 #call-to-action .cta-btn:hover {
-  background: white;
+  background: #2dc997;
   border: 2px solid #2dc997;
 }
 
