--- a/css/table.css
+++ b/css/table.css
@@ -415,7 +415,7 @@ th, td {
   background: -webkit-linear-gradient(-68deg, #ac32e4 , #4801ff);
   background: -o-linear-gradient(-68deg, #ac32e4 , #4801ff);
   background: -moz-linear-gradient(-68deg, #ac32e4 , #4801ff);
-  background: linear-gradient(-68deg, #ac32e4 , #4801ff);
+  background: linear-gradient(-68deg, rgba(56,146,201,0.8), rgba(0, 75, 167, 0.8));
 }
 
 .table100.ver6 table {
