--- a/css/table.css
+++ b/css/table.css
@@ -423,7 +423,7 @@ th, td {
 }
 
 .table100.ver6 td {
-  font-family: Montserrat-Regular;
+  font-family: "Poppins", sans-serif;
   font-size: 14px;
   color: #fff;
   line-height: 1.4;
