--- a/css/style.css
+++ b/css/style.css
@@ -149,17 +149,18 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   display: table;
   width: 100%;
-  height: 100vh;
-  background-image: url(../img/hero-bg.jpg);
+  height: 125vh;
+  background-image: url(../img/hero-bg3.jpg);
+  background-position-x: center;
   background-size: cover;
 }
 
 #hero .hero-container {
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0);
   display: table-cell;
   margin: 0;
   padding: 0 10px;
-  text-align: center;
+  text-align: left;
   vertical-align: middle;
   padding-top: 50px;
 }
@@ -169,8 +170,14 @@ h1, h2, h3, h4, h5, h6 {
   height:auto;
   float: center;
   position: relative;
-  top: 40px;
+  padding-top: 10%;
   padding-bottom: 50px;
+}
+
+#hero .hero-container h1, h2{
+
+  position: relative;
+  top: 10%;
 }
 
 #hero h1 {
@@ -310,7 +317,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: 16px;
   outline: none;
 }
 
