--- a/css/style.css
+++ b/css/style.css
@@ -302,6 +302,11 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
+@media screen and (max-width:700px){
+  #nav-menu-container{
+    display: none;
+  }
+}
 
 
 /* Nav Meu Styling */
