--- a/css/style.css
+++ b/css/style.css
@@ -166,12 +166,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .hero-container img {
-  width: 32%;
+  width: 40%;
   height: auto;
   float: center;
   position: relative;
   padding-top: 10%;
   padding-bottom: 50px;
+}
+
+@media screen and (max-width:700px){
+  #hero .hero-container img {
+    width: 80%;
+  }
 }
 
 #hero .hero-container h1, h2 {
